[gd_scene load_steps=43 format=3 uid="uid://bxmjrrti6weix"]

[ext_resource type="Script" uid="uid://chtw2cfquxn21" path="res://Script/setting.gd" id="1_l3tci"]
[ext_resource type="Texture2D" uid="uid://c02hk8gklv3yv" path="res://Asset_Midterm/UI/UI/ValueBar_128x16.png" id="1_urowa"]
[ext_resource type="Texture2D" uid="uid://dc3wk2ovxupxh" path="res://Asset_Midterm/UI/UI/ValueRed_120x8.png" id="2_ls17r"]
[ext_resource type="PackedScene" uid="uid://bal4y7qsf3yqg" path="res://Scene/inventory.tscn" id="2_rd0yu"]
[ext_resource type="Texture2D" uid="uid://cj181y6p4ikil" path="res://Asset_Midterm/UI/UI/BlackBigCircleBoxWithBorder_27x27.png" id="3_thkpk"]
[ext_resource type="Texture2D" uid="uid://b241iedr6hbil" path="res://Asset_Midterm/UI/Player_UI/Nymera.png" id="4_3cm36"]
[ext_resource type="Script" uid="uid://byvatqq7vympv" path="res://Script/Health_Bar.gd" id="5_wsdcc"]
[ext_resource type="Texture2D" uid="uid://cwgdsshwp7g4x" path="res://Asset_Midterm/UI/Player_UI/Elendros new.png" id="8_466ek"]
[ext_resource type="Texture2D" uid="uid://bhmhd4fyqm4g" path="res://Asset_Midterm/UI/UI/CoinIcon_16x18.png" id="9_tt1so"]
[ext_resource type="FontFile" uid="uid://bdl4qpamcrivq" path="res://Fonts/OBGB.TTF" id="10_8sq55"]
[ext_resource type="Texture2D" uid="uid://byicixnbvtqhe" path="res://Asset_Midterm/UI/UI/MenusBox_34x34.png" id="11_3flpx"]
[ext_resource type="Texture2D" uid="uid://v7p21xrmkms4" path="res://Asset_Midterm/UI/UI/MenusIcons_34x34.png" id="12_xwu8j"]
[ext_resource type="Texture2D" uid="uid://dkyfygbi0dekj" path="res://Asset_Midterm/UI/UI/Button_52x14.png" id="13_x1q7n"]
[ext_resource type="FontFile" uid="uid://dbydje27os4iv" path="res://Fonts/AncientModernTales-a7Po.ttf" id="14_466ek"]
[ext_resource type="Texture2D" uid="uid://dcwmmeumqrkse" path="res://Asset_Midterm/Achievement icon/Crown1.png" id="15_tt1so"]
[ext_resource type="Texture2D" uid="uid://mnocfx3oqu5e" path="res://Asset_Midterm/Achievement icon/Chest2.png" id="16_8sq55"]

[sub_resource type="Animation" id="Animation_etu1s"]
resource_name = "Close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Setting_UI/Setting_Panel_Bg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-143, -82), Vector2(-143, 660)]
}

[sub_resource type="Animation" id="Animation_sw748"]
resource_name = "Open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Setting_UI/Setting_Panel_Bg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-143, 620), Vector2(-143, -89), Vector2(-143, -82)]
}

[sub_resource type="Animation" id="Animation_pt3qq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Setting_UI/Setting_Panel_Bg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-143, 620)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_etu1s"]
_data = {
&"Close": SubResource("Animation_etu1s"),
&"Open": SubResource("Animation_sw748"),
&"RESET": SubResource("Animation_pt3qq")
}

[sub_resource type="LabelSettings" id="LabelSettings_wsdcc"]
font = ExtResource("10_8sq55")
font_size = 50
font_color = Color(0.729412, 0.568627, 0.345098, 1)
shadow_size = 10
shadow_color = Color(0.2, 0.180392, 0.14902, 1)
shadow_offset = Vector2(7, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jee1r"]
texture = ExtResource("12_xwu8j")
region_rect = Rect2(110, 7, 20, 20)
modulate_color = Color(0.517647, 0.517647, 0.517647, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7lmrb"]
texture = ExtResource("12_xwu8j")
region_rect = Rect2(110, 7, 20, 20)
modulate_color = Color(0.517184, 0.517184, 0.517184, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cg7m8"]
texture = ExtResource("12_xwu8j")
region_rect = Rect2(110, 7, 20, 20)
modulate_color = Color(0.698039, 0.698039, 0.698039, 1)

[sub_resource type="LabelSettings" id="LabelSettings_l3tci"]
font = ExtResource("10_8sq55")
font_size = 100

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rd0yu"]
texture = ExtResource("12_xwu8j")
region_rect = Rect2(37, 0, 27, 32)
modulate_color = Color(0.517647, 0.517647, 0.517647, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_466ek"]
texture = ExtResource("12_xwu8j")
region_rect = Rect2(37, 0, 27, 32)
modulate_color = Color(0.517647, 0.517647, 0.517647, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wsdcc"]
texture = ExtResource("12_xwu8j")
region_rect = Rect2(37, 0, 27, 32)
modulate_color = Color(0.698039, 0.698039, 0.698039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sgjqw"]
bg_color = Color(0.509804, 0.396078, 0.243137, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ax0r5"]
bg_color = Color(0.239216, 0.196078, 0.223529, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kfs54"]
texture = ExtResource("13_x1q7n")
modulate_color = Color(0.552956, 0.552956, 0.552955, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hnrck"]
texture = ExtResource("13_x1q7n")
modulate_color = Color(0.666667, 0.666667, 0.666667, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5exsd"]
texture = ExtResource("13_x1q7n")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vknid"]
texture = ExtResource("13_x1q7n")
modulate_color = Color(0.666667, 0.666667, 0.666667, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_00b7q"]
texture = ExtResource("13_x1q7n")
modulate_color = Color(0.666667, 0.666667, 0.666667, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pij00"]
texture = ExtResource("13_x1q7n")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5luq1"]
bg_color = Color(0.69462, 0.554322, 0.367857, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rd0yu"]
font = ExtResource("14_466ek")
font_size = 200

[sub_resource type="LabelSettings" id="LabelSettings_3flpx"]
font = ExtResource("14_466ek")
font_size = 150

[sub_resource type="LabelSettings" id="LabelSettings_xwu8j"]
font = ExtResource("14_466ek")
font_size = 150

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x1q7n"]
texture = ExtResource("15_tt1so")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sgjqw"]
texture = ExtResource("16_8sq55")

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasUI" type="CanvasLayer" parent="."]

[node name="Setting" type="Node2D" parent="CanvasUI"]
position = Vector2(556, 628)
script = ExtResource("1_l3tci")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasUI"]
root_node = NodePath("../Setting")
libraries = {
&"": SubResource("AnimationLibrary_etu1s")
}

[node name="Inventory" type="Control" parent="CanvasUI"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Inventory" parent="CanvasUI/Inventory" instance=ExtResource("2_rd0yu")]
position = Vector2(-228, -44)
scale = Vector2(1.5, 1.5)

[node name="Player_show" type="Control" parent="CanvasUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(3, 3)

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasUI/Player_show"]
layout_mode = 0
offset_left = 42.3333
offset_top = 11.0
offset_right = 170.333
offset_bottom = 27.0
value = 100.0
texture_under = ExtResource("1_urowa")
texture_progress = ExtResource("2_ls17r")
texture_progress_offset = Vector2(4, 4)
tint_under = Color(0.666569, 0.666569, 0.666569, 1)
tint_progress = Color(0.825381, 0.446303, 0.441366, 1)
script = ExtResource("5_wsdcc")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="CanvasUI/Player_show"]
modulate = Color(0.666667, 0.666667, 0.666667, 1)
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 51.0
offset_bottom = 49.0
texture = ExtResource("3_thkpk")
metadata/_edit_lock_ = true

[node name="Nymera" type="TextureRect" parent="CanvasUI/Player_show"]
visible = false
modulate = Color(0.787759, 0.787759, 0.787759, 1)
layout_mode = 0
offset_left = -75.6667
offset_top = -22.0
offset_right = 4644.33
offset_bottom = 3258.0
scale = Vector2(0.0434777, 0.0434777)
texture = ExtResource("4_3cm36")
metadata/_edit_lock_ = true

[node name="Elendros" type="TextureRect" parent="CanvasUI/Player_show"]
modulate = Color(0.788235, 0.788235, 0.788235, 1)
layout_mode = 0
offset_left = -99.3334
offset_top = -35.3332
offset_right = 4620.67
offset_bottom = 3244.67
scale = Vector2(0.0508095, 0.0508095)
texture = ExtResource("8_466ek")
metadata/_edit_lock_ = true

[node name="Setting_Bar" type="TextureRect" parent="CanvasUI/Player_show"]
layout_mode = 0
offset_left = 6.66667
offset_right = 46.6667
offset_bottom = 40.0

[node name="Coins" type="TextureRect" parent="CanvasUI/Player_show"]
layout_mode = 0
offset_left = 51.6667
offset_top = 29.3333
offset_right = 67.6667
offset_bottom = 47.3333
texture = ExtResource("9_tt1so")

[node name="Label" type="Label" parent="CanvasUI/Player_show/Coins"]
layout_mode = 0
offset_left = 16.0
offset_top = -4.33333
offset_right = 56.0
offset_bottom = 18.6667
theme_override_colors/font_color = Color(0.729412, 0.568627, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0.2, 0.180392, 0.14902, 1)
text = ": "

[node name="Coin_Amount" type="Label" parent="CanvasUI/Player_show/Coins"]
layout_mode = 0
offset_left = 23.3333
offset_right = 143.333
offset_bottom = 60.0
scale = Vector2(0.291646, 0.291646)
theme_override_colors/font_color = Color(0.729412, 0.568627, 0.345098, 1)
theme_override_colors/font_shadow_color = Color(0.2, 0.180392, 0.14902, 1)
theme_override_fonts/font = ExtResource("10_8sq55")
theme_override_font_sizes/font_size = 12
text = "144"
label_settings = SubResource("LabelSettings_wsdcc")

[node name="Setting_Button" type="Control" parent="CanvasUI"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -49.0
offset_top = 11.0
offset_right = -9.0
offset_bottom = 51.0
grow_horizontal = 0

[node name="MenusBox34x34" type="Sprite2D" parent="CanvasUI/Setting_Button"]
modulate = Color(0.698039, 0.698039, 0.698039, 1)
position = Vector2(8.49994, 29.5)
scale = Vector2(2, 2)
texture = ExtResource("11_3flpx")

[node name="Setting_Button" type="Button" parent="CanvasUI/Setting_Button"]
layout_mode = 0
offset_left = -22.0
offset_top = 2.0
offset_right = 8.0
offset_bottom = 31.0
scale = Vector2(2, 2)
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_jee1r")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7lmrb")
theme_override_styles/normal = SubResource("StyleBoxTexture_cg7m8")

[node name="Label" type="Label" parent="CanvasUI/Setting_Button"]
modulate = Color(0.698039, 0.698039, 0.698039, 1)
layout_mode = 0
offset_left = -246.0
offset_top = 16.0
offset_right = 634.0
offset_bottom = 136.0
scale = Vector2(0.234848, 0.234848)
text = "Setting"
label_settings = SubResource("LabelSettings_l3tci")
horizontal_alignment = 2

[node name="Achievement_Button" type="Control" parent="CanvasUI"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="MenusBox34x34" type="Sprite2D" parent="CanvasUI/Achievement_Button"]
modulate = Color(0.698039, 0.698039, 0.698039, 1)
position = Vector2(-1.00006, 118)
scale = Vector2(2, 2)
texture = ExtResource("11_3flpx")

[node name="Achievement_Button" type="Button" parent="CanvasUI/Achievement_Button"]
layout_mode = 0
offset_left = -32.0
offset_top = 84.0
offset_right = -2.0
offset_bottom = 117.0
scale = Vector2(2, 2)
focus_mode = 0
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_rd0yu")
theme_override_styles/hover = SubResource("StyleBoxTexture_466ek")
theme_override_styles/normal = SubResource("StyleBoxTexture_wsdcc")

[node name="Label" type="Label" parent="CanvasUI/Achievement_Button"]
modulate = Color(0.698039, 0.698039, 0.698039, 1)
layout_mode = 0
offset_left = -255.0
offset_top = 105.0
offset_right = 625.0
offset_bottom = 225.0
scale = Vector2(0.234848, 0.234848)
text = "Achievement"
label_settings = SubResource("LabelSettings_l3tci")
horizontal_alignment = 2

[node name="Setting_UI" type="Control" parent="CanvasUI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Setting_Panel_Bg" type="Panel" parent="CanvasUI/Setting_UI"]
layout_mode = 0
offset_left = -143.0
offset_top = 620.0
offset_right = -47.0
offset_bottom = 705.0
scale = Vector2(3, 3)
theme_override_styles/panel = SubResource("StyleBoxFlat_sgjqw")

[node name="Setting_panel_Bg2" type="Panel" parent="CanvasUI/Setting_UI/Setting_Panel_Bg"]
layout_mode = 0
offset_left = 4.66678
offset_top = 4.33333
offset_right = 91.6668
offset_bottom = 81.3333
theme_override_styles/panel = SubResource("StyleBoxFlat_ax0r5")

[node name="Resume_Button" type="Button" parent="CanvasUI/Setting_UI/Setting_Panel_Bg"]
modulate = Color(0.666667, 0.666667, 0.666667, 1)
layout_mode = 0
offset_left = 22.6668
offset_top = 36.0003
offset_right = 71.6668
offset_bottom = 48.0003
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_kfs54")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hnrck")
theme_override_styles/normal = SubResource("StyleBoxTexture_5exsd")

[node name="Label" type="Label" parent="CanvasUI/Setting_UI/Setting_Panel_Bg/Resume_Button"]
layout_mode = 0
offset_left = 10.3335
offset_top = 1.99966
offset_right = 87.3335
offset_bottom = 21.9997
scale = Vector2(0.387, 0.387)
theme_override_fonts/font = ExtResource("10_8sq55")
text = "Resume"

[node name="Exit_Button" type="Button" parent="CanvasUI/Setting_UI/Setting_Panel_Bg"]
modulate = Color(0.666667, 0.666667, 0.666667, 1)
layout_mode = 0
offset_left = 22.6668
offset_top = 52.6664
offset_right = 71.6668
offset_bottom = 64.6664
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_vknid")
theme_override_styles/pressed = SubResource("StyleBoxTexture_00b7q")
theme_override_styles/normal = SubResource("StyleBoxTexture_pij00")

[node name="Label3" type="Label" parent="CanvasUI/Setting_UI/Setting_Panel_Bg/Exit_Button"]
layout_mode = 0
offset_left = 14.667
offset_top = 2.00003
offset_right = 66.667
offset_bottom = 25.0
scale = Vector2(0.387, 0.387)
theme_override_fonts/font = ExtResource("10_8sq55")
text = "Exit"

[node name="Panel" type="Panel" parent="CanvasUI/Setting_UI/Setting_Panel_Bg"]
modulate = Color(0.698039, 0.698039, 0.698039, 1)
layout_mode = 0
offset_left = 17.3817
offset_top = 27.333
offset_right = 78.3817
offset_bottom = 28.333
theme_override_styles/panel = SubResource("StyleBoxFlat_5luq1")

[node name="Label2" type="Label" parent="CanvasUI/Setting_UI/Setting_Panel_Bg"]
modulate = Color(0.698039, 0.698039, 0.698039, 1)
layout_mode = 0
offset_left = 23.6667
offset_top = 10.3333
offset_right = 113.667
offset_bottom = 30.3333
scale = Vector2(0.55, 0.55)
theme_override_fonts/font = ExtResource("10_8sq55")
text = "Setting"
vertical_alignment = 1

[node name="Achievement_UI" type="Control" parent="CanvasUI"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="Setting_Panel_Bg" type="Panel" parent="CanvasUI/Achievement_UI"]
layout_mode = 0
offset_left = -1229.0
offset_top = -362.0
offset_right = -836.0
offset_bottom = -212.0
scale = Vector2(3, 3)
theme_override_styles/panel = SubResource("StyleBoxFlat_sgjqw")

[node name="Setting_panel_Bg2" type="Panel" parent="CanvasUI/Achievement_UI/Setting_Panel_Bg"]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 389.0
offset_bottom = 146.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ax0r5")

[node name="Ac1" type="Label" parent="CanvasUI/Achievement_UI/Setting_Panel_Bg"]
modulate = Color(0.698039, 0.698039, 0.698039, 1)
layout_mode = 0
offset_left = 82.0
offset_top = 14.6667
offset_right = 3505.0
offset_bottom = 749.667
scale = Vector2(0.0910987, 0.0910987)
theme_override_fonts/font = ExtResource("10_8sq55")
text = "Acchievement I : Untouched"
label_settings = SubResource("LabelSettings_rd0yu")

[node name="detail1" type="Label" parent="CanvasUI/Achievement_UI/Setting_Panel_Bg"]
modulate = Color(0.698039, 0.698039, 0.698039, 1)
layout_mode = 0
offset_left = 98.6667
offset_top = 36.0
offset_right = 3521.67
offset_bottom = 771.0
scale = Vector2(0.0910987, 0.0910987)
theme_override_fonts/font = ExtResource("10_8sq55")
text = "End the game without getting damage from monsters
( Including the Unders and damage from Big Boss )"
label_settings = SubResource("LabelSettings_3flpx")

[node name="Ac2" type="Label" parent="CanvasUI/Achievement_UI/Setting_Panel_Bg"]
modulate = Color(0.698039, 0.698039, 0.698039, 1)
layout_mode = 0
offset_left = 82.0
offset_top = 76.0
offset_right = 2378.0
offset_bottom = 654.0
scale = Vector2(0.0910987, 0.0910987)
theme_override_fonts/font = ExtResource("10_8sq55")
text = "Achievement II : Noble's Treasury"
label_settings = SubResource("LabelSettings_rd0yu")

[node name="detail2" type="Label" parent="CanvasUI/Achievement_UI/Setting_Panel_Bg"]
modulate = Color(0.698039, 0.698039, 0.698039, 1)
layout_mode = 0
offset_left = 100.0
offset_top = 97.6667
offset_right = 3523.0
offset_bottom = 832.667
scale = Vector2(0.0910987, 0.0910987)
theme_override_fonts/font = ExtResource("10_8sq55")
text = "In the end have amount of coins greater than 
or equal to 200 coins"
label_settings = SubResource("LabelSettings_xwu8j")

[node name="achievement1" type="Panel" parent="CanvasUI/Achievement_UI/Setting_Panel_Bg"]
modulate = Color(0.698039, 0.698039, 0.698039, 1)
layout_mode = 0
offset_left = 16.3333
offset_top = 7.0
offset_right = 204.333
offset_bottom = 195.0
scale = Vector2(0.317793, 0.317793)
theme_override_styles/panel = SubResource("StyleBoxTexture_x1q7n")

[node name="achievement2" type="Panel" parent="CanvasUI/Achievement_UI/Setting_Panel_Bg"]
modulate = Color(0.698039, 0.698039, 0.698039, 1)
layout_mode = 0
offset_left = 5.66666
offset_top = 59.6667
offset_right = 259.667
offset_bottom = 313.667
scale = Vector2(0.317793, 0.317793)
theme_override_styles/panel = SubResource("StyleBoxTexture_sgjqw")

[connection signal="mouse_entered" from="CanvasUI/Setting_Button/Setting_Button" to="CanvasUI/Setting" method="_on_setting_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasUI/Setting_Button/Setting_Button" to="CanvasUI/Setting" method="_on_setting_button_mouse_exited"]
[connection signal="pressed" from="CanvasUI/Setting_Button/Setting_Button" to="CanvasUI/Setting" method="_on_setting_button_pressed"]
[connection signal="button_down" from="CanvasUI/Achievement_Button/Achievement_Button" to="CanvasUI/Setting" method="_on_achievement_button_button_down"]
[connection signal="button_up" from="CanvasUI/Achievement_Button/Achievement_Button" to="CanvasUI/Setting" method="_on_achievement_button_button_up"]
[connection signal="mouse_entered" from="CanvasUI/Achievement_Button/Achievement_Button" to="CanvasUI/Setting" method="_on_achievement_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasUI/Achievement_Button/Achievement_Button" to="CanvasUI/Setting" method="_on_achievement_button_mouse_exited"]
[connection signal="pressed" from="CanvasUI/Setting_UI/Setting_Panel_Bg/Resume_Button" to="CanvasUI/Setting" method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasUI/Setting_UI/Setting_Panel_Bg/Exit_Button" to="CanvasUI/Setting" method="_on_exit_button_pressed"]
